TeenyTiny/parse.py
import sys
from lex import *

# Parser object keeps track of current token, checks if the code matches the grammar, and emits code along the way.
class Parser:
    def __init__(self, lexer, emitter):
        self.lexer = lexer
        self.emitter = emitter

        self.symbols = set()    # All variables we have declared so far.
        self.labelsDeclared = set() # Keep track of all labels declared
        self.labelsGotoed = set() # All labels goto'ed, so we know if they exist or not.

        self.curToken = None
        self.peekToken = None
        self.labelnumber = -1 
        self.nextToken()
        self.nextToken()    # Call this twice to initialize current and peek.

    def lnumber(self):
        self.labelnumber = self.labelnumber + 1
        return(str(self.labelnumber))

    # Return true if the current token matches.
    def checkToken(self, kind):
        return kind == self.curToken.kind

    # Return true if the next token matches.
    def checkPeek(self, kind):
        return kind == self.peekToken.kind

    # Try to match current token. If not, error. Advances the current token.
    def match(self, kind):
        if not self.checkToken(kind):
            self.abort("Expected " + kind.name + ", got " + self.curToken.kind.name)
        self.nextToken()

    # Advances the current token.
    def nextToken(self):
        self.curToken = self.peekToken
        self.peekToken = self.lexer.getToken()
        # No need to worry about passing the EOF, lexer handles that.

    # Return true if the current token is a comparison operator.
    def isComparisonOperator(self):
        return self.checkToken(TokenType.GT) or self.checkToken(TokenType.GTEQ) or self.checkToken(TokenType.LT) or self.checkToken(TokenType.LTEQ) or self.checkToken(TokenType.EQEQ) or self.checkToken(TokenType.NOTEQ)

    def abort(self, message):
        sys.exit("Error! " + message)


    # Production rules.

    # program ::= {statement}
    def program(self):
        self.emitter.headerLine("@main")
        self.emitter.headerLine("call @basicsys")
        
        # Since some newlines are required in our grammar, need to skip the excess.
        while self.checkToken(TokenType.NEWLINE):
            self.nextToken()

        # Parse all the statements in the program.
        while not self.checkToken(TokenType.EOF):
            self.statement()

        # Wrap things up.
        self.emitter.emitLine("ret")

        # Check that each label referenced in a GOTO is declared.
        for label in self.labelsGotoed:
            if label not in self.labelsDeclared:
                self.abort("Attempting to GOTO to undeclared label: " + label)


    # One of the following statements...
    def statement(self):
        # Check the first token to see what kind of statement this is.

        # "PRINT" (expression | string)
        if self.checkToken(TokenType.PRINT):
            self.nextToken()

            if self.checkToken(TokenType.STRING):
                # # Simple string, so print it.
                # self.emitter.emitLine("printf(\"" + self.curToken.text + "\\n\");")
                # self.nextToken()
                self.abort("Not be able to print STRINGS yet " +
                           self.curToken.text)

            else:
                # Expect an expression and print the result as int.
                self.expression()
                self.emitter.emitLine("prt")


        # "IF" comparison "THEN" block "ENDIF"
        elif self.checkToken(TokenType.IF):
            num = self.lnumber()
            self.nextToken()
            self.emitter.emitLine("call " + ":" + "_if_comp_" + num)
            self.emitter.emitLine("loada")
            self.emitter.emitLine("testz")
            self.emitter.emitLine("jumpf " + ":" + "_if_end_" + num)
            self.emitter.emitLine("jump " + ":" + "_if_action_" + num)
            self.emitter.emitLine(":" + "_if_comp_" + num)

            self.comparison()
            self.emitter.emitLine("ret")

            self.match(TokenType.THEN)
            self.nl()
            self.emitter.emitLine(":" + "_if_action_" + num)

            # Zero or more statements in the body.
            while not self.checkToken(TokenType.ENDIF):
                self.statement()

            self.match(TokenType.ENDIF)
            self.emitter.emitLine(":" + "_if_end_" + num)
            self.emitter.emitLine("clra")

        # "WHILE" comparison "REPEAT" block "ENDWHILE"
        elif self.checkToken(TokenType.WHILE):
            num = self.lnumber()
            self.nextToken()
            self.emitter.emitLine(":" + "_while_start_" + num)
            self.emitter.emitLine("call " + ":" + "_while_comp_" + num)
            self.emitter.emitLine("loada")
            self.emitter.emitLine("testz")
            self.emitter.emitLine("jumpf " + ":" + "_while_end_" + num)
            self.emitter.emitLine("jump " + ":" + "_while_action_" + num)
            self.emitter.emitLine(":" + "_while_comp_" + num)
             
            self.comparison()
            self.emitter.emitLine("ret")

            self.match(TokenType.REPEAT)
            self.nl()
            self.emitter.emitLine(":" + "_while_action_" + num)

            # Zero or more statements in the loop body.
            while not self.checkToken(TokenType.ENDWHILE):
                self.statement()
            self.emitter.emitLine("jump " + ":" + "_while_start_" + num)

            self.match(TokenType.ENDWHILE)
            self.emitter.emitLine(":" + "_while_end_" + num)
            self.emitter.emitLine("clra")

        # "LABEL" ident
        elif self.checkToken(TokenType.LABEL):
            self.nextToken()

            # Make sure this label doesn't already exist.
            if self.curToken.text in self.labelsDeclared:
                self.abort("Label already exists: " + self.curToken.text)
            self.labelsDeclared.add(self.curToken.text)

            self.emitter.emitLine(":" + self.curToken.text)
            self.match(TokenType.IDENT)

        # "GOTO" ident
        elif self.checkToken(TokenType.GOTO):
            self.nextToken()
            self.labelsGotoed.add(self.curToken.text)
            self.emitter.emitLine("jump " + ":" + self.curToken.text)
            self.match(TokenType.IDENT)

        # "LET" ident = expression
        elif self.checkToken(TokenType.LET):
            self.nextToken()

            #  Check if ident exists in symbol table. If not, declare it.
            if self.curToken.text not in self.symbols:
                self.symbols.add(self.curToken.text)
                self.emitter.headerLine("push " + "'" + self.curToken.text + "'")
                self.emitter.headerLine("set $MEM")

            self.emitter.emitLine("push " + "'" + self.curToken.text + "'")
            self.match(TokenType.IDENT)
            self.match(TokenType.EQ)
            
            self.expression()
            self.emitter.emitLine("call @swap")
            self.emitter.emitLine("storei")

        # "INPUT" ident
        elif self.checkToken(TokenType.INPUT):
            self.nextToken()

            # If variable doesn't already exist, declare it.
            if self.curToken.text not in self.symbols:
                self.symbols.add(self.curToken.text)
                self.emitter.headerLine("push " + "'" + self.curToken.text + "'")
                self.emitter.headerLine("set $MEM")

            # Emit scanf but also validate the input. If invalid, set the variable to 0 and clear the input.
            self.emitter.emitLine("push " + "'" + self.curToken.text + "'")
            self.emitter.emitLine("call @input")
            self.emitter.emitLine("call @swap")
            self.emitter.emitLine("storei")
            self.match(TokenType.IDENT)

        # This is not a valid statement. Error!
        else:
            self.abort("Invalid statement at " + self.curToken.text + " (" + self.curToken.kind.name + ")")

        # Newline.
        self.nl()


    # comparison ::= expression (("==" | "!=" | ">" | ">=" | "<" | "<=") expression)+
    def comparison(self):
        self.expression()
        # Must be at least one comparison operator and another expression.
        if self.isComparisonOperator():
            self.emitter.emitLine("push " + "'" + self.curToken.text + "'")
            self.nextToken()
            self.expression()
            self.emitter.emitLine("call @swap")
            self.emitter.emitLine("calli")
        # Can have 0 or more comparison operator and expressions.
        while self.isComparisonOperator():
            self.emitter.emitLine("push " + "'" + self.curToken.text + "'")
            self.nextToken()
            self.expression()
            self.emitter.emitLine("call @swap")
            self.emitter.emitLine("calli")



    # expression ::= term {( "-" | "+" ) term}
    def expression(self):
        self.term()
        # Can have 0 or more +/- and expressions.
        while self.checkToken(TokenType.PLUS) or self.checkToken(TokenType.MINUS):
            self.emitter.emitLine("push " + "'" + self.curToken.text + "'")
            self.nextToken()
            self.term()
            self.emitter.emitLine("call @swap")
            self.emitter.emitLine("calli")


    # term ::= unary {( "/" | "*" ) unary}
    def term(self):
        self.unary()
        # Can have 0 or more *// and expressions.
        while self.checkToken(TokenType.ASTERISK) or self.checkToken(TokenType.SLASH):
            self.emitter.emitLine("push " + "'" + self.curToken.text + "'")
            self.nextToken()
            self.unary()
            self.emitter.emitLine("call @swap")
            self.emitter.emitLine("calli")


    # unary ::= ["+" | "-"] primary
    def unary(self):
        # Optional unary +/-
        if self.checkToken(TokenType.PLUS) or self.checkToken(TokenType.MINUS):
            self.emitter.emit(self.curToken.text)
            self.nextToken()        
        self.primary()


    # primary ::= number | ident
    def primary(self):
        if self.checkToken(TokenType.NUMBER): 
            self.emitter.emitLine("push " + self.curToken.text)
            self.nextToken()
        elif self.checkToken(TokenType.IDENT):
            # Ensure the variable already exists.
            if self.curToken.text not in self.symbols:
                self.abort("Referencing variable before assignment: " + self.curToken.text)

            self.emitter.emitLine("push " + "'" + self.curToken.text + "'")
            self.emitter.emitLine("loadi")
            self.nextToken()
        else:
            # Error!
            self.abort("Unexpected token at " + self.curToken.text)

    # nl ::= '\n'+
    def nl(self):
        # Require at least one newline.
        self.match(TokenType.NEWLINE)
        # But we will allow extra newlines too, of course.
        while self.checkToken(TokenType.NEWLINE):
            self.nextToken()